gitlab/gitlab-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-svc
  namespace: devops
spec:
  ports:
  - port: 80
  selector:
    name: gitlab
