gitlab/gitlab-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: gitlab.devops.io
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab-svc
          servicePort: 80
